resources/tasks-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tasks-app
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: tasks-app
  template:
    metadata:
      labels:
        app: tasks-app
    spec:
      containers:
      - image: quay.io/jchraibi/tasks-app:stage
        name: tasks-app
        imagePullPolicy: Always
        ports:
        - containerPort: 80
